RF_13.006.01 | User > Verify sorting by name > POM (#1289)